# atap_widgets

./: .cookiecutter.json  .flake8  .gitignore  .pre-commit-config.yaml  CITATION.cff  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  LICENSE.rst  README.rst  concordance_standalone.ipynb  environment.yml  noxfile.py  pyproject.toml  requirements.txt
.github/workflows/: constraints.txt  install.yml  release.yml  tests.yml
demos/: Demo_Concordance.ipynb
docs/: conf.py  index.rst  reference.rst  requirements.txt  usage.rst
src/ant_widgets/: __init__.py  concordance.py  conversation.py  plotting.py  text_search.py
src/atap_widgets/: Demo_Concordance.ipynb  __init__.py  concordance.py  conversation.py  plotting.py  utils.py
tests/: __init__.py  conftest.py  test_concordance.py  test_concordance_history.py  test_conversation.py  test_main.py  test_plotting.py  test_text_search.py  test_utils.py
tests/data/: A.debate_clean.xlsx  D.QandA_Dummy.txt  Japanese_demo.txt  MarkScottNationalPressClub.txt  sherlock_for_testing.csv
