[tool.poetry]
name = "ant_widgets"
version = "0.0.1"
description = "ant_widgets"
authors = ["Marius Mather <marius.mather@sydney.edu.au>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/Language-Research-Technology/ant_widgets"
repository = "https://github.com/Language-Research-Technology/ant_widgets"
documentation = "https://ant_widgets.readthedocs.io"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.urls]
Changelog = "https://github.com/Language-Research-Technology/ant_widgets/releases"

[tool.poetry.dependencies]
python = ">=3.7"
ipywidgets = "^7.6"
bokeh = "^2.4"
pandas = "*"
spacy = "^3.1"
textacy = "*"


[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
coverage = {extras = ["toml"], version = "^6.1"}
safety = "^1.10.3"
mypy = "^0.910"
typeguard = "^2.12.1"
xdoctest = {extras = ["colors"], version = "^0.15.5"}
sphinx = "^4.1.1"
sphinx-autobuild = "^2021.3.14"
pre-commit = "^2.13.0"
flake8 = "^4"
black = "^21.10b0"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^21.4.3"
flake8-docstrings = "^1.6.0"
flake8-rst-docstrings = "^0.2.3"
pep8-naming = "^0.12.0"
darglint = "^1.8.0"
reorder-python-imports = "^2.5.0"
pre-commit-hooks = "^4.0.1"
sphinx-rtd-theme = "^1.0"
sphinx-click = "^3.0.1"
Pygments = "^2.9.0"
en_core_web_sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.1.0/en_core_web_sm-3.1.0-py3-none-any.whl"}

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["ant_widgets"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.mypy]
strict = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
