[tool.poetry]
name = "atap_widgets"
version = "0.2.10"
description = "Interactive widgets used by the Australian Text Analytics Platform"
authors = ["Marius Mather <marius.mather@sydney.edu.au>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/Australian-Text-Analytics-Platform/atap_widgets"
repository = "https://github.com/Australian-Text-Analytics-Platform/atap_widgets"
documentation = "https://atap_widgets.readthedocs.io"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.urls]
Changelog = "https://github.com/Australian-Text-Analytics-Platform/atap_widgets/releases"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
ipywidgets = "^7.6"
bokeh = "^2.4"
pandas = "^1.3"
xlsxwriter = "^3.0.2"
spacy = "^3.1"
textacy = "*"
sentence-transformers = "^2.1.0"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.4"
en-core-web-sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.1.0/en_core_web_sm-3.1.0-py3-none-any.whl"}
pytest = "^7.0.1"
coverage = {extras = ["toml"], version = "^6.3"}
safety = "^1.10.3"
xdoctest = {extras = ["colors"], version = "^1.0.0"}
sphinx = "^4.3"
sphinx-autobuild = "^2021.3.14"
pre-commit = "^2.19.0"
flake8 = "^4"
black = "^22.1"
flake8-bandit = "^3.0"
flake8-bugbear = "^22.1.11"
flake8-docstrings = "^1.6.0"
flake8-rst-docstrings = "^0.2.5"
pep8-naming = "^0.12.0"
darglint = "^1.8.0"
reorder-python-imports = "^3.0"
pre-commit-hooks = "^4.0.1"
sphinx-rtd-theme = "^1.0"
sphinx-click = "^4.0.3"
Pygments = "^2.9.0"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["atap_widgets"]

[tool.coverage.report]
show_missing = true

[tool.mypy]
strict = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
