[tool.poetry]
name = "atap_widgets"
version = "0.4.0"
description = "Interactive widgets used by the Australian Text Analytics Platform"
authors = ["Marius Mather <marius.mather@sydney.edu.au>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/Australian-Text-Analytics-Platform/atap_widgets"
repository = "https://github.com/Australian-Text-Analytics-Platform/atap_widgets"
documentation = "https://atap_widgets.readthedocs.io"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.urls]
Changelog = "https://github.com/Australian-Text-Analytics-Platform/atap_widgets/releases"
"Project homepage" = "https://www.atap.edu.au/"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
ipywidgets = "^8.0"
bokeh = "^2.0"
pandas = "^1.3"
spacy = "^3.0"
xlsxwriter = "^3"
textacy = "*"

[tool.poetry.dev-dependencies]
sentence-transformers = "^2.1.0"
jupyterlab = "^3.4"
en-core-web-sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.4.0/en_core_web_sm-3.4.0-py3-none-any.whl"}
pytest = "^7.0.1"
coverage = {extras = ["toml"], version = "^6.4"}
safety = "^2.1.1"
xdoctest = {extras = ["colors"], version = "^1.0.0"}
sphinx = "^5.1"
sphinx-autobuild = "^2021.3.14"
pre-commit = "^2.19.0"
flake8 = "^5"
black = "^22.1"
flake8-bandit = "^4.1"
flake8-bugbear = "^22.12.6"
flake8-docstrings = "^1.6.0"
flake8-rst-docstrings = "^0.2.5"
pep8-naming = "^0.13.0"
darglint = "^1.8.0"
reorder-python-imports = "^3.0"
pre-commit-hooks = "^4.3.0"
sphinx-rtd-theme = "^1.0"
sphinx-click = "^4.2.0"
Pygments = "^2.9.0"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["atap_widgets"]

[tool.coverage.report]
show_missing = true

[tool.mypy]
strict = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
